refactor   - break project in three modules   - spark, json and commond